split one test method into multiple simple tests